<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UTD Scavenger</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="join">Join</string>
    <string name="create_new">Create New</string>
    <string name="edit_existing">Edit Existing</string>
    <string name="utdscavenger_logo">UTDScavenger Logo</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="tap_phones_graphic">Tap Phones Graphic</string>
    <string name="tap_phones_client_instructions">Tap your device with the host\'s device.</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="found_items">Found Items</string>
    <string name="items_to_find">Items to Find</string>
    <string name="add_new_players">Add New Players</string>
    <string name="add_new_items">Add New Items</string>
    <string name="dialog_add_new_player">Add New Player</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_for_contact">Waiting for contact...</string>

</resources>
