<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.utd_scavenger.company.utdscavenger.JoinActivity"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        android:text="@string/tap_phones_client_instructions"
        android:textSize="22sp"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/tap_phones"
        android:contentDescription="@string/tap_phones_graphic"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/waiting_for_contact"
        android:textSize="22sp"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
