<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.utd_scavenger.company.utdscavenger.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/utdscavenger_logo"
        android:contentDescription="@string/utdscavenger_logo"

        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="65" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="35"
        android:orientation="vertical">

        <Button
            android:id="@+id/join_button"
            android:onClick="onClick"
            android:text="@string/join"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            style="@style/std_button" />

        <Button
            android:id="@+id/create_button"
            android:onClick="onClick"
            android:text="@string/create_new"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            style="@style/std_button" />

    </LinearLayout>
</LinearLayout>
